# R.A.G.E

./: .dockerignore  .env.example  .gitignore  CHECKPOINTS.md  Dockerfile  Dockerfile.ui  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
.claude/: settings.local.json
examples/: poc_local_client.py  poc_remote_client.py  simple_pipeline.json  simple_pipeline.yaml
examples/poc-project/: .env.example  README.md  app.py  requirements.txt  web_app.py
examples/rag-demo/: .env.example  README.md  app.py  rag_engine.py  requirements.txt
rag_os/: __init__.py
rag_os/api/: __init__.py  models.py  server.py
rag_os/cli/: __init__.py  main.py
rag_os/core/: __init__.py  async_executor.py  context.py  errors.py  executor.py  registry.py  result.py  runtime.py  spec.py  step.py  types.py  validator.py
rag_os/eval/: __init__.py  evaluator.py  judges.py  metrics.py
rag_os/models/: __init__.py  chunk.py  document.py  embedding.py  index.py
rag_os/plugins/: __init__.py  base.py  hooks.py  loader.py
rag_os/sdk/: __init__.py  builder.py  client.py  remote.py  session.py
rag_os/security/: __init__.py  rate_limit.py  secrets.py  validation.py
rag_os/steps/: __init__.py
rag_os/storage/: __init__.py  base.py  file.py  memory.py
rag_os/tracing/: __init__.py  metrics.py  tracer.py
rag_os/ui/: __init__.py  app.py  (+1 more)
rag_os/ui-react/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
tests/: __init__.py  test_api.py  test_cli.py  test_eval.py  test_plugins.py  test_sdk.py  test_security.py  test_storage.py  test_tracing.py
(+70 files in other folders)
