[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-os"
version = "0.1.0"
description = "A fully customizable RAG Operating System - pipeline compiler and runtime"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "RAG OS Team"}
]
keywords = ["rag", "retrieval", "llm", "pipeline", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
cli = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]
api = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]
remote = [
    "httpx>=0.25.0",
]
ui = [
    "streamlit>=1.29.0",
    "requests>=2.31.0",
    "pandas>=2.1.0",
    "plotly>=5.18.0",
]
all = [
    "rag-os[cli,api,remote,ui]",
]

[project.scripts]
rag-os = "rag_os.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["rag_os"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
